# nlp_100_nocks

./: README.md
chapter_1/: 000.py  001.py  002.py  003.py  004.py  005.py  006.py  007.py  008.py  009.py  README.md  main.py  pyproject.toml
chapter_2/: 010.py  011.py  012.py  013.py  014.py  015.py  016.py  017.py  018.py  019.py  README.md  main.py  pyproject.toml  randomized.txt  sorted_by_col3_code.txt  sorted_by_col3_unix.txt
chapter_3/: README.md
chapter_4/: README.md  pyproject.toml
chapter_4/030/: 030.py  verbs_list.csv  verbs_only.txt
chapter_4/038/: 038.py  rfidf_top20.csv
chapter_4/039/: 039.py
chapter_5/: 040.py  041.py  042.py  043.py  044.py  045.py  046.py  047.py  048.py  049.py  README.md  main.py  pyproject.toml
chapter_6/: .gitignore  050.py  051.py  052.py  053.py  054.py  055.py  056.py  057.py  058.py  059.py  README.md  main.py  pyproject.toml
chapter_7/: .gitignore  060.py  061.py  062.py  063.py  064.py  065.py  066.py  067.py  068.py  069.py  README.md  main.py  pyproject.toml
chapter_8/: .gitignore  070.py  071.py  072.py  073.py  074.py  075.py  076.py  077.py  078.py  079.py  README.md  main.py  pyproject.toml
chapter_9/: .gitignore  080.py  081.py  082.py  083.py  084.py  085.py  086.py  087.py  088.py  089.py  README.md  main.py  pyproject.toml
