[project]
name = "chapter-9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cosine-similarity>=0.1.2",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "pipeline>=0.1.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers[torch]>=5.0.0",
]
